# numtype-dk

./: .gitignore  .travis.yml  LICENSE  README  README.md  changelog.md  numtype-dk.cabal  stack.yaml
Numeric/NumType/: DK.hs  DKTests.hs
Numeric/NumType/DK/: Integers.hs  Nat.hs  Naturals.hs
