Name:                numtype-dk
Version:             0.5
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2012-2014
Author:              Bjorn Buckwalter
Maintainer:          bjorn@buckwalter.se
Stability:           provisional
Homepage:            http://github.com/bjornbm/numtype-dk
Synopsis:            Type-level integers, implemented using TypeNats, Data
                     Kinds, and Closed Type Families.
Description:

    This package provides type level representations of the
    (positive and negative) integers and basic operations (addition,
    subtraction, multiplication, division, exponentiation) on these.

    The numtype-dk package differs from the numtype package in that
    the NumTypes are implemented using Data Kinds, TypeNats, and
    Closed Type Families rather than Functional Dependencies.

    Requires GHC 7.8 or later.

Category:            Math
Build-Type:          Simple
Build-Depends:       base < 5
Exposed-Modules:     Numeric.NumType.DK.Integers
Other-Modules:       Numeric.NumType.DK.Naturals
Extra-source-files:  README,
                     Numeric/NumType/DKTests.hs
